Fix css on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,27 @@ button:hover {
   color: #424242;
 }
 
+
+.savered {
+  background-color: rgb(213, 231, 213);
+  height: 40px;
+  color: black;
+  border: none;
+  padding: 5px 10px;
+}
+
+.inputred {
+  background-color: #fafafa;
+  border-radius: 10px;
+  width: 600px;
+  height: 30px;
+  margin-right: 10px;
+  padding: 10px 10px 10px 25px;
+  border: none;
+  box-shadow: inset 0 -2px 1px rgb(0 0 0 / 15%);
+  outline: none;
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 60px;
@@ -181,29 +202,19 @@ button:hover {
     height: 25px;
   }
   .todo-row {
-    width: 250px;
+    width: 360px;
+    padding: 1px 1px 1px 5px;
   }
   .list {
-    width: 250px;
+    width: 360px;
+  }
+  .editToDo{
+    padding: 1px 1px 1px 5px;
+  }
+  
+  .inputred {
+    width: 220px;
+
   }
 }
 
-.savered {
-  background-color: rgb(213, 231, 213);
-  height: 40px;
-  color: black;
-  border: none;
-  padding: 5px 10px;
-}
-
-.inputred {
-  background-color: #fafafa;
-  border-radius: 10px;
-  width: 600px;
-  height: 30px;
-  margin-right: 10px;
-  padding: 10px 10px 10px 25px;
-  border: none;
-  box-shadow: inset 0 -2px 1px rgb(0 0 0 / 15%);
-  outline: none;
-}
